feat(manager): implement cloud dictionary and theme support
- Add cloud sync service for remote dictionaries
- Support theme dictionary extraction and management
- Refactor Dictionary Manager UI with tabbed view
- Add Metadata Editor for dictionary details
- Improve UI localization (tabs, badges, search placeholders)
- Update API and type definitions
- Add technical whitepaper documentation

--- a/src/lang/zh.json
+++ b/src/lang/zh.json
@@ -19,6 +19,14 @@
     "manager.delete_confirm_title": "删除词典",
     "manager.delete_confirm_message": "确定要删除 {pluginId} 的 {locale} 词典吗？",
     "manager.delete_confirm_warning": "此操作无法撤销。",
+    "manager.registered_plugins_tab": "插件",
+    "manager.themes_tab": "主题",
+    "label.builtin": "内置",
+    "label.external": "外部",
+    "label.overlay": "覆盖",
+    "label.theme_builtin": "主题预设",
+    "manager.search_plugins_placeholder": "搜索插件...",
+    "manager.search_themes_placeholder": "搜索主题...",
     "action.import_dictionary": "导入词典",
     "action.add_translation": "添加翻译",
     "action.export_template": "导出模板",
@@ -27,12 +35,15 @@
     "action.remove": "移除",
     "action.cancel": "取消",
     "action.delete": "删除",
+    "action.update_available": "可用更新: v{version}",
+    "action.download_locale": "下载 {locale}",
     "editor.search_placeholder": "搜索键或值...",
     "editor.show_missing_only": "仅显示缺失项",
     "editor.save": "保存",
     "editor.export_json": "导出 JSON",
     "editor.metadata": "元数据",
     "editor.close": "关闭",
+    "editor.title": "词典编辑器",
     "editor.table_key": "键",
     "editor.table_value": "值",
     "editor.table_source": "原文",
